kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  namespace: default
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: todoapp
        image: yuwangjr/todoapp
        ports:
        - containerPort: 8080
  selector:
    matchLabels:
      app: todoapp
