kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp
  namespace: default
spec:
  ports:
    - port: 80
  selector:
    app: todoapp
